[tool.poetry]
name = "bb114stats404"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
PyYAML = "^6.0.1"
scikit-learn = "^1.4.1"
ucimlrepo = "^0.0.6"
certifi = "^2024.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
